--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "body-parser": "^1.18.3",
     "ejs": "^3.1.7",
     "express": "^4.16.3",
-    "express-handlebars": "^6.0.5",
+    "express-handlebars": "^3.0.2",
+    "handlebars": "^4.7.7",
     "pug": "^3.0.2"
   }
 }
